# nethz

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SEO.md  SEO_GUIDE.md  SEO_QUICK_START.md  SEO_SIMPLE.md  build.sh  deploy.sh  docker-compose.yml  entrypoint.sh  main.py  manage.py  pyproject.toml
.github/workflows/: django.yml  docker.yml  format.yml  pylint.yml
accounts/: admin.py  emails.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_customuser_username.py  0003_alter_customuser_username.py  0004_alter_customuser_email.py  0005_customuser_capitals_highscore.py  0006_customuser_languages_highscore.py  0007_customuser_currencies_highscore.py  0008_alter_customuser_username.py  0009_alter_customuser_username.py  0010_customuser_is_email_verified.py  0011_alter_customuser_username.py
accounts/profanity/: profanity_de.csv  profanity_en.csv
assets/: staticfiles.json
assets/css/: base.f60bdf097d2f.css  errors.aa54fc61061d.css  errors.css
assets/js/: quiz.js
lib/: context_processors.py  seo_utils.py
lib/templatetags/: macros.py
main/: admin.py  models.py  tests.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_alter_weekentry_exercise_link_and_more.py  0004_weekentry_materials_number.py  (+3 more)
nethz_django/: asgi.py  middleware.py  settings.py  sitemaps.py  urls.py  views.py  wsgi.py
templates/: 404.html  500.html  robots.txt  seo_meta.html
worldle/: apps.py  cards.py  country_data.py  currency_data.py  leaders.py  tests.py  urls.py  utils.py  views.py
(+45 files in other folders)
