[tool.poetry]
name = "nethz-django"
version = "0.1.0"
description = "\"Personal ETHZ website\""
authors = ["Enzo1603 <96661578+Enzo1603@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.5"
Django = "^5.0.0"
python-decouple = "^3.8"
django-crispy-forms = "^2.1"
crispy-bootstrap5 = "^2023.10"
gunicorn = "^21.2.0"
whitenoise = "^6.6.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
