[project]
name = "nethz"
version = "2.3.2"
description = "\"Personal ETHZ website\""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crispy-bootstrap5>=2025.6",
    "django>=5.2.4",
    "django-crispy-forms>=2.4",
    "gunicorn>=23.0.0",
    "python-decouple>=3.8",
    "whitenoise>=6.9.0",
]

[dependency-groups]
dev = ["ruff>=0.12.7"]
