[project]
name = "nethz"
version = "3.1.13"
description = "\"Personal ETHZ website\""
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "crispy-bootstrap5>=2025.6",
    "django>=6.0",
    "django-crispy-forms>=2.5",
    "django-jazzmin>=2.7.0",
    "gunicorn>=23.0.0",
    "python-decouple>=3.8",
    "whitenoise>=6.11.0",
]

[dependency-groups]
dev = ["ruff>=0.12.11"]
